# clara22

./: README.md  app.py  pyproject.toml
static/: cript.json  style.css
templates/: dashboard.html  home.html  login.html  register.html
