[tool.poetry]
name = "repl-nix-clara22"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_clara22"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-bcrypt = "^1.0.1"
flask-sqlalchemy = "^3.1.1"
jinja2 = "^3.1.3"
flask-wtf = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
